--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -17,6 +17,10 @@ target_link_libraries(RunTests
 # Add the src folder so your tests can find production headers like Mat4.hpp and Vec3.hpp
 target_include_directories(RunTests PRIVATE ${PROJECT_SOURCE_DIR}/src)
 
+target_compile_definitions(${PROJECT_NAME}
+    PRIVATE PROJECT_ROOT_PATH="${CMAKE_CURRENT_SOURCE_DIR}"
+)
+
 target_compile_features(RunTests PUBLIC cxx_std_23)
 if (MSVC)
     target_compile_options(RunTests PUBLIC /W4 /WX)
