fix linux build problems with template deduction, println, stacktrace

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -7,20 +7,24 @@ add_library(FlightDataLib
 )
 
 target_include_directories(FlightDataLib
-    PUBLIC ${PROJECT_SOURCE_DIR}
+    PRIVATE ${PROJECT_SOURCE_DIR}
 )
 
 target_compile_features(FlightDataLib
-    PUBLIC cxx_std_23
+    PRIVATE cxx_std_23
+)
+
+target_compile_definitions(FlightDataLib 
+    PUBLIC PROJECT_ROOT_PATH="${CMAKE_CURRENT_SOURCE_DIR}"
 )
 
 if (MSVC)
     target_compile_options(FlightDataLib PUBLIC /W4 /WX)
-    target_compile_definitions(FlightDataLib PUBLIC -DNOMINMAX PUBLIC PROJECT_ROOT_PATH="${CMAKE_CURRENT_SOURCE_DIR}")
 endif()
 
+
 add_executable(FlightData
-    main.cpp
+    Main.cpp
 )
 
 target_link_libraries(FlightData
