--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -18,10 +18,11 @@ target_compile_definitions(FlightDataLib
     PUBLIC PROJECT_ROOT_PATH="${CMAKE_CURRENT_SOURCE_DIR}"
 )
 
-if (MSVC)
+if (CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
+    target_compile_options(FlightDataLib PUBLIC -Wall -Wextra -Wpedantic -Werror)
+elseif (CMAKE_CXX_COMPILER_ID STREQUAL "MSVC")
     target_compile_options(FlightDataLib PUBLIC /W4 /WX)
 endif()
-
 
 add_executable(FlightData
     Main.cpp
