--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -7,21 +7,30 @@ add_library(FlightDataLib
 )
 
 target_include_directories(FlightDataLib
-    PRIVATE ${PROJECT_SOURCE_DIR}
+    PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}
 )
 
 target_compile_definitions(FlightDataLib 
-    PUBLIC PROJECT_ROOT_PATH="${CMAKE_CURRENT_SOURCE_DIR}"
+    PRIVATE PROJECT_ROOT_PATH="${PROJECT_SOURCE_DIR}"
 )
 
+# Add compiler warnings for clang and msvc and interpret warnings as errors
 if (CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
-    target_compile_options(FlightDataLib PUBLIC -Wall -Wextra -Wpedantic -Werror)
+    target_compile_options(FlightDataLib 
+        PRIVATE -Wall -Wextra -Wpedantic -Werror
+    )
 elseif (CMAKE_CXX_COMPILER_ID STREQUAL "MSVC")
-    target_compile_options(FlightDataLib PUBLIC /W4 /WX)
+    target_compile_options(FlightDataLib 
+        PRIVATE /W4 /WX
+    )
 endif()
 
 add_executable(FlightData
     Main.cpp
+)
+
+target_compile_definitions(FlightData
+    PRIVATE PROJECT_ROOT_PATH="${PROJECT_SOURCE_DIR}"
 )
 
 target_link_libraries(FlightData
