--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -7,7 +7,7 @@ add_library(FlightDataLib
 )
 
 target_include_directories(FlightDataLib
-    PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}
+    PRIVATE ${PROJECT_SOURCE_DIR}/include
 )
 
 target_compile_definitions(FlightDataLib 
