--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -18,6 +18,14 @@ jobs:
       id: cmake-cache
       run: echo "key=fcache-${{ hashFiles('**/CMakeLists.txt') }}" >> $env:GITHUB_OUTPUT
 
+    - name: Cache FetchContent dependencies
+      uses: actions/cache@v4
+      with:
+        path: |
+          C:\Users\runneradmin\AppData\Local\fetchcontent
+          build\_deps
+        key: ${{ steps.cmake-cache.outputs.key }}
+
     - name: Configure (CI)
       run: cmake --preset ci -DFETCHCONTENT_BASE_DIR="C:/Users/runneradmin/AppData/Local/fetchcontent"
 
