rename FlightPath -> FlightData

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,17 +1,20 @@
 cmake_minimum_required(VERSION 3.19)
 
 project(
-    FlightData 
+    FlightPath
     VERSION "0.1.0"
-    DESCRIPTION "Fight Data"
+    DESCRIPTION "Reconstructs a Fight Path based on IMU data."
     LANGUAGES C CXX
 )
 
+# usefull for some tools and neovim
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
+# set c++ standard
 set(CMAKE_CXX_STANDARD 23)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
+# add catch2 dependency via fetch content
 find_package(Catch2 QUIET)
 if (NOT Catch2_FOUND)
     include(FetchContent)
@@ -24,5 +27,8 @@ if (NOT Catch2_FOUND)
     FetchContent_MakeAvailable(Catch2)
 endif()
 
+# add main project (library and executeable)
 add_subdirectory(src)
+
+# add unit tests
 add_subdirectory(tests)
