--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,5 +30,5 @@ jobs:
         run: cmake --preset release-clang -DFETCHCONTENT_BASE_DIR="$HOME/.cache/fetchcontent"
 
       - name: Build
-        run: cmake --build --preset release-clang --target FlightData --parallel 4
+        run: cmake --build --preset release-clang --target FlightPath --parallel 4
 
