--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -3,14 +3,14 @@ services:
     build:
       context: .. # this allows us to have access to the complete repository and not only the docker folder
       dockerfile: docker/Dockerfile
-    working_dir: /code/FlightData # Set the working dir to where the code lives
+    working_dir: /code/FlightPath # Set the working dir to where the code lives
     tty: true # Enable interactive terminal (useful for shell access)
     command: bash # Start container with Bourne-again shell
     # Only add folders and files we want to have access to inside the container
     volumes:
-      - ../include:/code/FlightData/include
-      - ../src:/code/FlightData/src
-      - ../tests:/code/FlightData/tests
-      - ../data:/code/FlightData/data
-      - ../CMakeLists.txt:/code/FlightData/CMakeLists.txt
-      - ../CMakePresets.json:/code/FlightData/CMakePresets.json
+      - ../include:/code/FlightPath/include
+      - ../src:/code/FlightPath/src
+      - ../tests:/code/FlightPath/tests
+      - ../data:/code/FlightPath/data
+      - ../CMakeLists.txt:/code/FlightPath/CMakeLists.txt
+      - ../CMakePresets.json:/code/FlightPath/CMakePresets.json
