need to configure before building doxygen

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,8 +10,23 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
+      - name: Check out repository
+        uses: actions/checkout@v4
+
+      - name: Set up CMake cache key
+        id: cmake-cache
+        run: echo "key=fcache-tests-${{ hashFiles('**/CMakeLists.txt') }}" >> $GITHUB_OUTPUT
+
+      - name: Cache FetchContent dependencies
+        uses: actions/cache@v4
+        with:
+          path: |
+            ~/.cache/fetchcontent
+            build_deps
+          key: ${{ steps.cmake-cache.outputs.key }}
+
+      - name: Configure
+        run: cmake --preset release-clang -DFETCHCONTENT_BASE_DIR="$HOME/.cache/fetchcontent"
 
       - name: Install Doxygen
         run: sudo apt-get install doxygen graphviz -y
