fix path for doxygen zip in workflow

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -51,7 +51,7 @@ jobs:
       - name: Upload Doxygen HTML zip to release
         uses: softprops/action-gh-release@v2
         with:
-          files: doxygen-docs.zip
+          files: doxygen/doxygen-docs.zip
         env:
           GITHUB_TOKEN: ${{ secrets.GH_RELEASE_TOKEN }}
 
