--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,3 +1,16 @@
+# add catch2 dependency via fetch content
+find_package(Catch2 QUIET)
+if (NOT Catch2_FOUND)
+    include(FetchContent)
+    set(FETCHCONTENT_QUIET OFF)
+    FetchContent_Declare(
+      Catch2
+      GIT_REPOSITORY https://github.com/catchorg/Catch2.git
+      GIT_TAG v3.8.0
+    )
+    FetchContent_MakeAvailable(Catch2)
+endif()
+
 enable_testing()
 
 add_executable(RunTests
