--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,7 +26,7 @@ jobs:
           key: ${{ steps.cmake-cache.outputs.key }}
 
       - name: Configure
-        run: cmake --preset release-clang -DFETCHCONTENT_BASE_DIR="$HOME/.cache/fetchcontent"
+        run: cmake --preset release-docs -DFETCHCONTENT_BASE_DIR="$HOME/.cache/fetchcontent"
 
       - name: Install Doxygen
         run: sudo apt-get install doxygen graphviz -y
