--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -27,11 +27,11 @@ jobs:
           key: ${{ steps.cmake-cache.outputs.key }}
 
       - name: Configure
-        run: cmake --preset release-clang -DFETCHCONTENT_BASE_DIR="$HOME/.cache/fetchcontent"
+        run: cmake --preset tests-coverage -DFETCHCONTENT_BASE_DIR="$HOME/.cache/fetchcontent"
 
       - name: Build
-        run: cmake --build --preset release-clang --target RunTests --parallel 4
+        run: cmake --build --preset build-tests-coverage --target RunTests
 
       - name: Run Tests
-        working-directory: build/release/tests
+        working-directory: build/tests-coverage
         run: ctest
