--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,9 +21,7 @@ jobs:
       - name: Cache FetchContent dependencies
         uses: actions/cache@v4
         with:
-          path: |
-            ~/.cache/fetchcontent
-            build_deps
+          path: ~/.cache/fetchcontent
           key: ${{ steps.cmake-cache.outputs.key }}
 
       - name: Configure
