--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches: [ main ]
   pull_request:
-    branches: [ develop ]
+    branches: [ main, develop ]
 
 jobs:
   build:
@@ -14,18 +14,8 @@ jobs:
       - name: Check out repository
         uses: actions/checkout@v4
 
-      - name: Set up CMake cache key
-        id: cmake-cache
-        run: echo "key=fcache-build-${{ hashFiles('**/CMakeLists.txt') }}" >> $GITHUB_OUTPUT
-
-      - name: Cache FetchContent dependencies
-        uses: actions/cache@v4
-        with:
-          path: ~/.cache/fetchcontent
-          key: ${{ steps.cmake-cache.outputs.key }}
-
       - name: Configure
-        run: cmake --preset release-app -DFETCHCONTENT_BASE_DIR="$HOME/.cache/fetchcontent"
+        run: cmake --preset release-app
 
       - name: Build
         run: cmake --build --preset build-app --target FlightPath
