--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -7,10 +7,11 @@ services:
     tty: true # Enable interactive terminal (useful for shell access)
     # Only add folders and files we want to have access to inside the container
     volumes:
+      - ../coverage:/coverage
+      - ../data:/code/FlightPath/data
+      - ../doxygen:/code/FlightPath/doxygen
       - ../include:/code/FlightPath/include
       - ../src:/code/FlightPath/src
       - ../tests:/code/FlightPath/tests
-      - ../data:/code/FlightPath/data
       - ../CMakeLists.txt:/code/FlightPath/CMakeLists.txt
       - ../CMakePresets.json:/code/FlightPath/CMakePresets.json
-      - ../Doxyfile.in:/code/FlightPath/Doxyfile.in
