--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -6,20 +6,23 @@ WORKDIR /
 # Disable interactive promots during apt-get install
 ARG DEBIAN_FRONTEND=noninteractive
 
-# Install dependencies 
-# wget, lsb-release, software-properties-common, gnupg is only needed for Clang 18
-# At the end: Remove cached package lists
+# Install dependencies
 RUN apt-get update \
- && apt-get install -y \
-    wget \ 
-    lsb-release \
-    software-properties-common \
-    gnupg \
-    build-essential \
-    cmake \
-    ninja-build \
-    git-all \
- && rm -rf /var/lib/apt/lists/*
+    && apt-get install -y \
+       build-essential \
+       cmake \
+       ninja-build \
+       catch2 \
+    && rm -rf /var/lib/apt/lists/*
+
+# Install dependencies for Clang
+RUN apt-get update \
+    && apt-get install -y \
+       wget \ 
+       lsb-release \
+       software-properties-common \
+       gnupg \
+    && rm -rf /var/lib/apt/lists/*
 
 # Add LLVM repo and install Clang 18
 RUN wget https://apt.llvm.org/llvm.sh && \
@@ -30,6 +33,13 @@ RUN wget https://apt.llvm.org/llvm.sh && \
 # Make Clang 18 the default (100 is the priority)
 RUN update-alternatives --install /usr/bin/clang   clang   /usr/bin/clang-18   100 && \
     update-alternatives --install /usr/bin/clang++ clang++ /usr/bin/clang++-18 100
+
+# Install dependencies for coverage report
+RUN apt-get update \
+    && apt-get install -y \
+       llvm \
+       lcov \
+    && rm -rf /var/lib/apt/lists/*
 
 # Restores the frontend mode to default (dialog)
 ENV DEBIAN_FRONTEND=dialog
